<resources>
    <string name="app_name">ИС БОЛЬНИЦА</string>
    <string name="authentication">АУТЕНТИФИКАЦИЯ</string>
    <string name="captcha">Капча</string>
    <string name="first_name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="experience">Стаж</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="address">Адрес</string>
    <string name="name">Наименование</string>
    <string name="description">Описание</string>
    <string name="capacity">Вместимость</string>
    <string name="operation_type_id">Код вида операции</string>
    <string name="doctor_id">Код врача</string>
    <string name="ward_id">Код палаты</string>
    <string name="operations">ОПЕРАЦИИ</string>
    <string name="operation_types">ВИДЫ ОПЕРАЦИИ</string>
    <string name="doctors">ВРАЧИ</string>
    <string name="patients">ПАЦИЕНТЫ</string>
    <string name="wards">ПАЛАТЫ</string>
    <string name="no_table">Вы не выбрали ни одну из таблиц</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="ok">Ок</string>
    <string name="error">Ошибка</string>
    <string name="not_filled_fields">Все поля должны быть заполнены</string>
    <string name="delete_doctor">Удаление врача</string>
    <string name="delete_doctor_msg">Внимание! При удалении данного врача удалятся связанные с ним данные из таблиц Палаты, Операции и Пациенты.\nПродолжить?</string>
    <string name="delete_operation">Удаление операции</string>
    <string name="delete_operation_msg">Вы точно хотите удалить эту операцию?</string>
    <string name="experience_not_number">Стаж должен быть числом</string>
    <string name="not_number_ot_id_and_d_id">Код вида операции и код врача должны быть числами и содержаться в базе данных</string>
    <string name="delete_ot">Удаление вида операции</string>
    <string name="delete_ot_msg">Внимание! При удалении данного вида операции удалятся связанные с ним данные из таблицы Операции.\nПродолжить?</string>
    <string name="not_number_ward_id">Код палаты должен быть числом и содержаться в базе данных</string>
    <string name="delete_patient">Удаление пациента</string>
    <string name="delete_patient_msg">Вы точно хотите удалить этого пациента?</string>
    <string name="not_number_capacity_and_w_id">Вместимость и код палаты должны быть числами, также код палаты должен содержаться в базе данных</string>
    <string name="delete_ward">Удаление палаты</string>
    <string name="delete_ward_msg">Внимание! При удалении данной палаты удалятся связанные с ней данные из таблицы Пациенты.\nПродолжить?</string>
    <string name="admin">Админ</string>
    <string name="user">Пользователь</string>
    <string name="no_data_found">Ничего не найдено</string>
    <string name="delete_admin_msg">Нельзя удалить администратора</string>
    <string name="none">ПУСТО</string>
    <string name="wrong_l_or_p">Wrong login or password</string>
    <string name="wrong_captcha">Неверно введена капча</string>
    <string name="reset_db">Сброс базы данных</string>
    <string name="reset_db_msg">Вы точно хотите сбросить базу данных?</string>
    <string name="exit_account">Выход из аккаунта</string>
    <string name="exit_account_msg">Вы точно хотите выйти из аккаунта?</string>
</resources>